--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Oswald:wght@300;400;600&family=Roboto:wght@300;400;500;700&display=swap');
+
+
+
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+   --roboto-font: 'Roboto', sans-serif;
+  --oswald-font: 'Oswald', sans-serif;
+  --lilita-font: 'Lilita One', cursive;
+
+
+
+
+    /* color  */
+    --light-black: #333;
+    --light-white:#f7f7f7;
+    --light-red:#e3000e;
+    --light-gray:#f6f9fa;
+    --light-gray-2:#dddddd;
+    --white:#fff;
+    --yellow:#f7be27;
+    --gray:#757575;
+    --brown:#6f5e4d;
+    --bg-cofee:#642f21;
+
+
+
+}
+body,html{
+    font-size:1rem;
+    font-family: sans-serif;
+    font-weight: 300;
+
+}
+@media(max-width:992px){
+    body,html{
+        font-size: 0.975rem;
+    }
+}
+h1,h2,h3,h4,h5,h6{
+    font-family: sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    line-height: 1.3;
+}
+p{
+    font-size: 16px;
+
+}
+     /* anchor tag */
+a{
+    color:#333;
+    text-decoration: none;
+    -webkit-transition: all 400ms ease-in-out;
+    -moz-transition: all 400ms ease-in-out;
+    -o-transition: all 400ms ease-in-out;
+    -ms-transition:all 400ms ease-in-out;
+    transition: all 400ms ease-in-out;
+
+}  
+/* Custom Scrollbar    */
+::-webkit-scrollbar{
+    width: 5px;
+
+
+}
+::-webkit-scrollbar-track{
+    background: #f1f1f1;
+
+    
+
+}
+::-webkit-scrollbar-thumb{
+    background: yellow;
+    
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* Common button */
+.order_now{
+    color:#333;
+    background: yellow;
+    border-color: yellow;
+    padding: 15px 38px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    font-family: sans-serif;
+    vertical-align: middle;
+    text-transform: uppercase;
+    transition: all 0.3s ease-in-out;
+
+}
+
+
+.order_now:hover
+.order_now:focus{
+    color: #f1f1f1;
+    background: transparent;
+    border-color: white;
+}
+
+
+.btn_red{
+    color: #f1f1f1;
+    background: #e3000e;
+    border-color:#e3000e;
+}
+
+
+
+.btn_red:hover,.btn_red:focus{
+    color: #e3000e;
+    background: transparent;
+    border-color:#e3000e;
 }
